Fixed layout issues

--- a/client/src/app/components/home/home.component.css
+++ b/client/src/app/components/home/home.component.css
@@ -50,7 +50,7 @@ mat-card {
   }
 
   .right_pane {
-    width: 50%;
+    width: 48%;
     float: left;
     /* background-color: aliceblue; */
   }
